--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.150",
+    "axios": "^0.19.2",
+    "buefy": "^0.8.17",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "lodash": "^4.17.15",
+    "vue": "^2.6.11",
+    "vue-yandex-maps": "^0.10.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
